--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,11 @@ flake8-docstrings==1.3.0
 pep8-naming==0.7.0
 pre-commit==1.10.4
 pytz==2018.5
+djangorestframework==3.10.3
+django-extensions==2.2.5
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.0.0
+jupyter-core==4.6.1
+ipython==7.9.0
+ipython-genutils==0.2.0
